--- a/index.html
+++ b/index.html
@@ -551,33 +551,10 @@
           </div>
         </div>
 
+        <!-- Tools -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Libraries</h4>
-            <div class="row text-center">
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Other -->
-        <div class="card">
-          <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
+            <h4 class="brown-text light">Tools</h4>
             <div class="row text-center">
 
 
@@ -603,22 +580,28 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.skku.edu/" target="_blank" class="teal-text hoverline">Sungkyunkwan University, SKKU</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">2066, Seobu-ro, Jangan-gu, Suwon-si, Gyeonggi-do, Republic of Korea </p>
                 <p>
                   <b>Degree: </b>Master of Science in Computer Science      
                   <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>CGPA: </b> 4.0/4.0
                 </p>
 
                 <ul>
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
+                    <li>Introduction to Data Structures</li>
+                    <li>System Programs</li>
+                    <li>Logic Circuit</li>
+                    <li>Programming Basics and Practice</li>
+                    <li>Computer Programming For Engineers</li>
+                    <li>Java Programming Practice</li>
+                    <li>Open Source Software Practice</li>
+
+                                        
                   </ul>
                   </p>
 
@@ -628,36 +611,7 @@
 
             
           </div>
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
-                <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
-                </p>
-                <p class="brown-text">Ahmedabad, India</p>
-                <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
-                  <br>
-                  <b>CGPA: </b>3.13/4.33
-                </p>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
-
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
