--- a/index.html
+++ b/index.html
@@ -533,20 +533,15 @@
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />Java
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />C
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
-              </div>
+            
             </div>
           </div>
         </div>
@@ -623,23 +618,23 @@
         <p>
           <a aria-label="Call SooAhn" data-position="top" data-tooltip="Call SooAhn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call SooAhn">+82107181****</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email SooAhn" href="mailto:sooahn330@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email SooAhn" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email SooAhn" href="mailto:sooahn330@gmail.com"
+              class="hoverline">sooahn330@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View SooAhn on GitHub" href="http://github.com/sooahn330" target="_blank"
+            data-position="top" data-tooltip="View SooAhn on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="SooAhn on Github" href="http://github.com/sooahn330" class="hoverline"
+              target="_blank">github.com/sooahn330</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
+          <a aria-label="View SooAhn on Instagram" href="http://linkedin.com/in/varadbhogayata" target="_blank"
             data-position="top" data-tooltip="View Varad on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
@@ -653,7 +648,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Student", "Developer", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
