--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />Java
+                <img alt="" src="/assets/img/C++-logo.png" class="responsive-img" />C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />C++
+                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />Java
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />C
