--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">SooAhn
         SooAhn Lee</a><span class="black-text">Software Student</span>
     </div>
   </nav>
@@ -536,10 +536,10 @@
                 <img alt="" src="/assets/img/C++-logo.png" class="responsive-img" />C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />Java
+                <img alt="" src="/assets/img/java-logo.png" class="responsive-img" />Java
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />C
+                <img alt="" src="/assets/img/C-logo.png" class="responsive-img" />C
               </div>
             
             </div>
@@ -555,6 +555,9 @@
 
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/docker-logo.png" class="responsive-img" />Docker
               </div>
    
             </div>
@@ -621,10 +624,10 @@
               aria-label="Call SooAhn">+82107181****</a></a>
         </p>
         <p>
-          <a aria-label="Email SooAhn" href="mailto:sooahn330@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email SooAhn" href="mailto:swan330@g.skku.com" target="_blank" data-position="top"
             data-tooltip="Email SooAhn" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email SooAhn" href="mailto:sooahn330@gmail.com"
-              class="hoverline">sooahn330@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email SooAhn" href="mailto:swan330@g.skku.com"
+              class="hoverline">swan330@g.skku.com</a></a>
         </p>
         <p>
           <a aria-label="View SooAhn on GitHub" href="http://github.com/sooahn330" target="_blank"
