--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@sooahn330" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
+  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Student" />
   <meta name="twitter:description" content="Software Student" />
   <meta name="twitter:url" content="https://twitter.com/sooahn330" />
   <meta name="author" content="SooAhn Lee" />
@@ -187,9 +187,9 @@
               <h5>Passionate student with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/sooahn330" target="_blank">
-                <button class="icon-btn linkedin">
-                  <i class="fa fa-linkedin"></i>
+              <a href="http://instagram.com/happysue330" target="_blank">
+                <button class="icon-btn instagram">
+                  <i class="fa fa-instagram"></i>
                 </button>
               </a>
               <a href="https://github.com/sooahn330/" target="_blank">
