--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <p>
           <ul>
             <li><b>Languages:</b> Python, Java,C, C++</li>
-            <li><b>Tools & Technologies:</b> Git</li>
+            <li><b>Tools & Technologies:</b> Git,Docker</li>
             <li><b>Achievements  and  Certifications:</b> One-Time Merit-Based Scholarship</li>
           </ul>
           
@@ -637,11 +637,11 @@
               target="_blank">github.com/sooahn330</a></a>
         </p>
         <p>
-          <a aria-label="View SooAhn on Instagram" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View SooAhn on Instagram" href="http://instagram.com/happysue330" target="_blank"
+            data-position="top" data-tooltip="View SooAhn on Instagram"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-instagram"></i><a aria-label="SooAhn on Instagram" href="http://instagram.com/happysue330"
+              class="hoverline" target="_blank">@happysue330</a></a>
         </p>
       </div>
     </section>
