--- a/index.html
+++ b/index.html
@@ -212,24 +212,26 @@
     <section id="about" class="section scrollspy">
       <h3 class="page-title white-text teal">About</h3>
       <div class="container flow-text">
-        <!-- <blockquote>
+        <blockquote>
           <h2>
             A Software Student with a passion to study a lot of fields.
 
           </h2>
-        </blockquote> -->        
+        </blockquote>        
         <p>
-          I am a Software Student at Sungkyunkwan University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          I am a second-year Student at Sungkyunkwan University majoring software. 
+          
+          I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
 
-          I have worked on technologies like Python, C, Java, C++. I am currently in my second year of university and studying various fields.
+          I have worked on technologies like Python, C, Java, C++. I'm going to study more and more languages deeply in the future.
 
-          I'm studying app development through a project called "Global Creative Challenger".
+          I have joined the "Global Creative Challenger," a one-year project dedicated to developing an application for the elderly and promoting digital inclusion. 
 
-          I am passionate about learning various fields and finding my interests.
+          I am currently experiencing various fields passionately to get to know my interests.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java,C, C++</li>
+            <li><b>Languages:</b> Python, Java, C, C++</li>
             <li><b>Tools & Technologies:</b> Git,Docker</li>
             <li><b>Achievements  and  Certifications:</b> One-Time Merit-Based Scholarship</li>
           </ul>
