--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                 <p>
                   <b>Degree: </b>Sophomore      
                   <br>
-                  <b>Major: Software</b>
+                  <b>Major: </b>Software
                   <br>
                   <b>CGPA: </b> 4.0/4.0
                 </p>
@@ -613,6 +613,7 @@
 
             
           </div>
+        <section class = timeline>
           <div class="col s12 m6 l6">
             <div class="title-wrapper">
               <div class="icon-box">
@@ -668,8 +669,9 @@
             </ol>
   
           </div>
-
+        </section>
         </div>
+      
       </div>
     </section>
 
