--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
                 </ul>
               </div>
             </div>
+          </div>
             <div class="col s12 m6 l6">
               <div class="card">
                 <div class="card-content">
@@ -514,23 +515,7 @@
                     <br>
                     <b>Wonmyong Elementaryschool </b> 2008~2013
                   </p>
-                  <ul>
-                    <p>
-                      <b>Relevant Courseworks:</b>
-                    <ul>
-                      <li>Introduction to Data Structures</li>
-                      <li>System Programs</li>
-                      <li>Logic Circuit</li>
-                      <li>Programming Basics and Practice</li>
-                      <li>Computer Programming For Engineers</li>
-                      <li>Java Programming Practice</li>
-                      <li>Open Source Software Practice</li>
-  
-                                          
-                    </ul>
-                    </p>
-  
-                  </ul>
+
 
                 </div>
               </div>
